# ComfyUI-DepthAnythingV3

./: README.md  __init__.py  prestartup_script.py  pyproject.toml  requirements.txt
.github/workflows/: test-linux-integration.yml  test-macos-integration.yml  test-macos.yml  test-unit.yml  test-windows-integration.yml  test-windows.yml
depth_anything_v3/model/: da3.py
nodes/: __init__.py  nodes_3d.py  nodes_impl.py  nodes_inference.py  nodes_loader.py  nodes_multiview.py  preview_nodes.py  utils.py
nodes/depth_anything_v3/: configs.py
nodes/depth_anything_v3/model/utils/: transform.py
tests/: conftest.py  smoke_test.py
tests/integration_real/: test_da3_small_real.py
web/: viewer_vtk.html
web/js/: pointcloud_preview.js  pointcloud_preview_vtk.js
workflows/: advanced.json  advanced_3d.json  advanced_3d_multiview.json  bas_relief.json  simple.json  video_multiview_depth.json
