[project]
name = "comfyui-depthanythingv3"
description = "ComfyUI nodes to use Depth Anything V3 - the latest depth estimation model from ByteDance. Supports monocular depth, multi-view depth, and camera pose estimation. Models autodownload from HuggingFace (depth-anything org)."
version = "1.0.0"
license = "Apache-2.0"
dependencies = [
    "huggingface_hub",
    "accelerate",
    "einops",
    "omegaconf",
    "safetensors",
    "addict"
]

[project.urls]
Repository = "https://github.com/your-username/ComfyUI-DepthAnythingV3"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "your-publisher-id"
DisplayName = "ComfyUI-DepthAnythingV3"
Icon = ""
