[project]
name = "ComfyUI-DepthAnythingV3"
description = "ComfyUI nodes to use Depth Anything V3 - the latest depth estimation model from ByteDance. For now monocular depth, camera pose estimation and 3D point clouds/gaussians are supported. Models autodownload from HuggingFace (depth-anything org). This is a first draft, let me know if you have any feedback! :)"
version = "0.0.11"
license = "Apache-2.0"
dependencies = [
    "huggingface_hub",
    "accelerate",
    "einops",
    "omegaconf",
    "safetensors",
    "addict"
]

[project.urls]
Repository = "https://github.com/PozzettiAndrea/ComfyUI-DepthAnythingV3"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "pznodes"
DisplayName = "ComfyUI-DepthAnythingV3"
Icon = ""
